# tantivy

./: BUILD.bazel  Cargo.toml  example_schema.proto
examples/: custom_collector.rs  integer_range_search.rs  multiple_producer.rs
query-grammar/: BUILD.bazel
src/: lib.rs  macros.rs
src/collector/: count_collector.rs  facet_collector.rs  mod.rs  multi_collector.rs  top_score_collector.rs
src/core/: index.rs  index_meta.rs  searcher.rs  segment.rs  segment_reader.rs
src/directory/: footer.rs  mmap_directory.rs  watch_event_router.rs
src/fastfield/: mod.rs  reader.rs  readers.rs  writer.rs
src/fastfield/bytes/: mod.rs  writer.rs
src/fastfield/multivalued/: mod.rs  reader.rs  writer.rs
src/fieldnorm/: writer.rs
src/indexer/: index_writer.rs  merger.rs  mod.rs  operation.rs  prepared_commit.rs  segment_updater.rs  segment_writer.rs
src/postings/: block_segment_postings.rs  mod.rs  postings_writer.rs  segment_postings.rs  serializer.rs
src/query/: all_query.rs  automaton_weight.rs  boost_query.rs  fuzzy_query.rs  mod.rs  range_query.rs  regex_query.rs
src/query/boolean_query/: block_wand.rs  boolean_query.rs
src/query/phrase_query/: mod.rs  phrase_query.rs  phrase_weight.rs
src/query/query_parser/: query_parser.rs
src/query/term_query/: mod.rs  term_query.rs  term_scorer.rs
src/schema/: document.rs  field_type.rs  mod.rs  schema.rs
src/snippet/: mod.rs
src/space_usage/: mod.rs
src/store/: mod.rs  reader.rs  writer.rs
src/termdict/: mod.rs
tests/failpoints/: mod.rs
