load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "tantivy_query_grammar",
    srcs = glob([
        "src/**/*.rs",
    ]),
    edition = "2018",
    deps = [
        "//rules/rust:combine",
    ],
)

rust_test(
    name = "test",
    crate = ":tantivy_query_grammar",
    crate_features = ["mmap"],
    edition = "2018",
    deps = [
        "//rules/rust:maplit",
        "//rules/rust:matches",
    ],
)
